@@ -57,6 +57,7 @@ struct _LXPanel
 struct _LXPanelClass
 {
     GtkWindowClass parent_class;
+    void (*icon_size_changed)(LXPanel *panel);
 };
 
 /**
